feat: раздача интернета, экран настроек и живучесть TURN